--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack build/webpack.commons.js --progress --verbose",
-    "start": "node server/server.js"
+    "build": "node build/build.js",
+    "start": "node build/server.js"
   },
   "author": "Avneesh Srivastava <avneesh.srivastava@gmail.com>",
   "license": "ISC",
@@ -21,6 +21,7 @@
     "ejs": "^2.6.1",
     "eslint-friendly-formatter": "^4.0.1",
     "express": "^4.16.4",
+    "express-favicon": "^2.0.1",
     "fs": "0.0.1-security",
     "rxjs": "^6.3.3",
     "zone.js": "^0.8.26"
@@ -33,6 +34,7 @@
     "angular2-template-loader": "^0.6.2",
     "awesome-typescript-loader": "^5.2.1",
     "brotli-gzip-webpack-plugin": "^0.5.0",
+    "chalk": "^2.4.1",
     "circular-dependency-plugin": "^5.0.2",
     "compression-webpack-plugin": "^2.0.0",
     "copy-webpack-plugin": "^4.6.0",
@@ -43,6 +45,7 @@
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.5.0",
+    "ora": "^3.0.0",
     "postcss-loader": "^3.0.0",
     "raw-loader": "^1.0.0",
     "sass-loader": "^7.1.0",
@@ -58,5 +61,14 @@
     "webpack-dev-middleware": "^3.4.0",
     "webpack-hot-middleware": "^2.24.3",
     "webpack-merge": "^4.1.5"
-  }
+  },
+  "engines": {
+    "node": ">=8.9.0",
+    "npm": ">= 3.0.0"
+  },
+  "browserslist": [
+    "> 1%",
+    "last 2 versions",
+    "not ie <= 8"
+  ]
 }
