--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,10 +18,10 @@
     "typeRoots": [
       "node_modules/@types"
     ],
-    "baseUrl": "./",
+    "baseUrl": "./src",
     "paths": {
       "@src/*": [
-        "src/*"
+        "./*"
       ]
     }
   },
