Adding Build Phase and Server Side Code

--- a/package.json
+++ b/package.json
@@ -18,11 +18,15 @@
     "@angular/platform-browser-dynamic": "^7.1.4",
     "@types/node": "^10.12.18",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
+    "compression": "^1.7.3",
+    "connect-history-api-fallback": "^1.5.0",
+    "consolidate": "^0.15.1",
     "ejs": "^2.6.1",
     "eslint-friendly-formatter": "^4.0.1",
     "express": "^4.16.4",
     "express-favicon": "^2.0.1",
     "fs": "0.0.1-security",
+    "mustache": "^3.0.1",
     "rxjs": "^6.3.3",
     "zone.js": "^0.8.26"
   },
