--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "node build/build.js",
-    "start": "node build/server.js"
+    "start": "node build/server.js",
+    "production": "node server.js"
   },
   "author": "Avneesh Srivastava <avneesh.srivastava@gmail.com>",
   "license": "ISC",
@@ -17,6 +18,7 @@
     "@angular/platform-browser": "^7.1.4",
     "@angular/platform-browser-dynamic": "^7.1.4",
     "@types/node": "^10.12.18",
+    "@types/uuid": "^3.4.4",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "compression": "^1.7.3",
     "connect-history-api-fallback": "^1.5.0",
@@ -25,9 +27,12 @@
     "eslint-friendly-formatter": "^4.0.1",
     "express": "^4.16.4",
     "express-favicon": "^2.0.1",
+    "express-http-proxy": "^1.5.0",
+    "font-awesome": "^4.7.0",
     "fs": "0.0.1-security",
     "mustache": "^3.0.1",
     "rxjs": "^6.3.3",
+    "uuid": "^3.3.2",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
@@ -59,6 +64,7 @@
     "to-string-loader": "^1.1.5",
     "typescript": ">=3.1.1 <3.2.0",
     "uglifyjs-webpack-plugin": "^2.1.0",
+    "url-loader": "^1.1.2",
     "webpack": "^4.28.2",
     "webpack-build-notifier": "^0.1.30",
     "webpack-cli": "^3.1.2",
